welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:29: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		if(mess == "1"){
                ^